@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2018-02-12  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/topol.c (ReadTOPOLImage): Avoid index out of bounds when
+input filename does not use a file extension. Fixes oss-fuzz issue
+6237 &quot;graphicsmagick/coder_TOPOL_fuzzer: Index-out-of-bounds in
+ReadTOPOLImage&quot;.</li>
+</ul>
+</blockquote>
 <p>2018-02-12  Fojtik Jaroslav  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;seznam&#46;cz">JaFojtik<span>&#64;</span>seznam<span>&#46;</span>cz</a>&gt;</p>
 <blockquote>
 <ul class="simple">
